# visopsys

./: BUILDING.TXT  COPYING.TXT  CREDITS.txt  Makefile  Makefile.include  README.md
docs/: KERNEL_API.txt  VIS_LIBRARY.txt  VSH_LIBRARY.txt  WINDOW_LIBRARY.txt
docs/visopsys.org/: about.htm  api-documentation-downloads.htm  developers.htm  downloads.htm  enablea20.htm  file-types.htm  gpl.htm  index.html  index.php.html  latest-kernel-api.htm  latest-shell-api.htm  latest-window-api.htm  lgpl.htm  memory-management.htm  multitasker.htm  news.htm  old-downloads.htm  os-dev.htm  robots.txt  screenshots.htm  search.html  search.php  search.php.html  vesamodes.htm
ports/binutils-2.13/: config.sub
ports/gcc-3.2/: config.guess  config.sub
software/: Makefile
src/: CHANGELOG.txt  ISSUES.txt  Makefile  platform.sh
src/newlib/: Makefile.am  Makefile.visopsys  close.c  configure.in  crt0.c  execve.c  fcntl.c  fork.c  fstat.c  getpid.c  gettod.c  globdata.c  isatty.c  kill.c  link.c  lseek.c  open.c  read.c  sbrk.c  stat.c  times.c  unlink.c  wait.c  write.c
src/newlib/sys/: api.h  errors.h  file.h  memory.h  stream.h
store/: Makefile
utils/: Makefile  README  api2html.sh  api2txt.sh  arch.sh  archive-binary.sh  archive-source.sh  change-year.sh  check-pots.sh  check-tree.sh  copy-boot.sh  copy-kernel.sh  copy-programs.sh  cpu.sh  floppy-install.sh  helpfiles.sh  image-cd.sh  image-floppy.sh  image-usb.sh  install.sh  kernel-symbols.sh  langstrings.sh  makemsgs.sh  makepot.sh  md5.txt  mergepot.sh  release.sh  trim-whitespace.sh  wget-site.sh  zip-instfiles.sh
(+1693 files in other folders)
